--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ script:
   - docker run -e CI=true d2321/react-test npm run test -- --coverage
 
 after_success:
-  - docker built -t d2321/multi-client ./client
-  - docker built -t d2321/multi-nginx ./nginx
-  - docker built -t d2321/multi-server ./server
-  - docker built -t d2321/multi-worker ./worker
+  - docker build -t d2321/multi-client ./client
+  - docker build -t d2321/multi-nginx ./nginx
+  - docker build -t d2321/multi-server ./server
+  - docker build -t d2321/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
